--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calculator page</title>
+    <title>Massiindex leht</title>
 </head>
 <body>
-    <h1>Calculator</h1>
+    <h1>Massiindex leht</h1>
     <form action="/" method="POST"><!--/-kuda idet zapros-->
-        <input type="text" name="num1" placeholder="enter number 1"><!--name-num1-imja peremennoj-->
-        <input type="text" name="num2" placeholder="enter number 2"><!--name-num2-imja peremennoj-->
+        <input type="text" name="num1" placeholder="Sinu kaal kilogrammides"><!--name-num1-imja peremennoj-->
+        <input type="text" name="num2" placeholder="Sinu pikkus meetrites"><!--name-num2-imja peremennoj-->
         <button type="submit" name="submit">Calculate</button>
     </form>
+    
 </body>
+
 </html>
